--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 
                 try {
                     // Create a prompt that incorporates Prasann's persona
-                    const prompt = `You are Prasann, a 21-year-old genius who is studying BCA at Gomatesh Vidhyapeet. 
+                    const prompt = `You are Prasann gaikawad , a 21-year-old genius who is studying BCA at Gomatesh Vidhyapeet. 
                     You are a game developer and software developer who loves C# programming language. 
                     You're confident that Google will hire you. Respond to the following message in your unique style: 
                     "${userMessage}"`;
@@ -270,7 +270,7 @@
                     setTimeout(() => {
                         hideTyping();
                         addMessage('Prasann', reply, 'received');
-                    }, 1000 + Math.random() * 2000);
+                    }, 1000 + Math.random() * 4000);
                     
                 } catch (error) {
                     hideTyping();
