--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
             .chat-input-container {
                 padding: 12px 5%;
                 padding-bottom: calc(12px + var(--safe-area-inset-bottom));
+                margin-bottom:30px;
             }
             
             .welcome-title {
